[package]
name = "alarm"
version = "0.1.0"
authors = ["Aron Granberg <aron.granberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rodio = { git = "https://github.com/RustAudio/rodio", rev = "3bc614f" }
synthrs = { git = "https://github.com/gyng/synthrs", rev = "77e062f3e40304dd2c3611d70ece6a0e4eaf9750" }
# rustfft = "3.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
# minihttp = { version = "0.1.9", features = [] }
# curl = "0.4"
# actix-web = { version="3.3", features=["rust-tls"] }
serde_json = "1.0"
# requests = "0.0"
futures = "0.3"
reqwest = { version = "0.12.4", features = ["rustls-tls", "blocking"], default-features=false }
rodio = { version = "0.11.0", optional = true }

[features]
audio = ["rodio"]

# [patch.crates-io]
# cpal = { git = "https://github.com/RustAudio/cpal.git", rev = "2b31fe4" }

[profile.release]
panic = "abort"
